crates/ox-kernel/tests/compile_fail/oxpath_rejects_dot_prefix.rs
use ox_kernel::oxpath;

fn main() {
    let _p = oxpath!(".hidden");
}
